01-flux/gilfoyle/apps/xmp-viz/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpo-viz-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kpo-viz
  template:
    metadata:
      labels:
        app: kpo-viz
    spec:
      containers:
        - name: app
          image: zot.themiple.ru/xpm-viz:v2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
      imagePullSecrets:
        - name: zot-registry-secret
