01-flux/gilfoyle/apps/xmp-viz/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kpo-viz-service
spec:
  type: ClusterIP
  selector:
    app: kpo-viz
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
