01-flux/gilfoyle/apps/xmp-viz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpo-viz-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - xpm.themiple.ru
      secretName: xmp-themiple-ru-tls
  rules:
    - host: xpm.themiple.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kpo-viz-service
                port:
                  number: 80
